# forensic-log-mcp

./: .gitignore  AbsBnfc.hs  CHANGELOG.md  CONTRIBUTING.md  DocBnfc.txt  LexBnfc.x  ParBnfc.y  PrintBnfc.hs  README.md  SkelBnfc.hs  TestBnfc.hs  bnfc.cf  jogoSaoPaulo.cf
benchmark/: BENCHMARK.md  CRITICAL_REVIEW.md  README.md  run_benchmark.sh  run_complete_benchmark.sh  run_comprehensive_benchmark.sh  run_fair_benchmark.sh
benchmark/data/: .gitkeep
benchmark/generate_logs/: Cargo.toml
benchmark/results_complete/: COMPLETE_RESULTS.md  fast_group_ip_awk_1M.txt  fast_group_ip_mcp_1M.txt  fast_group_method_awk_1M.txt  fast_group_method_mcp_1M.txt  fast_sum_size_awk_1M.txt  fast_sum_size_mcp_1M.txt  slow_complex_grep_1M.txt  slow_complex_mcp_1M.txt  slow_group_ref_awk_1M.txt  slow_group_ref_mcp_1M.txt  slow_group_ua_awk_1M.txt  slow_group_ua_mcp_1M.txt  slow_time_analysis_mcp_1M.txt
benchmark/results_comprehensive/: COMPREHENSIVE_RESULTS.md  agg_ip_awk_1M.txt  agg_ip_awk_times.txt  agg_ip_mcp_1M.txt  agg_ip_mcp_times.txt  agg_method_awk_1M.txt  agg_method_awk_times.txt  agg_method_mcp_1M.txt  agg_method_mcp_times.txt  agg_ref_awk_1M.txt  agg_ref_awk_times.txt  agg_ref_mcp_1M.txt  agg_ref_mcp_times.txt  agg_sum_awk_1M.txt  agg_sum_awk_times.txt  agg_sum_mcp_1M.txt  agg_sum_mcp_times.txt  agg_ua_awk_1M.txt  agg_ua_awk_times.txt  agg_ua_mcp_1M.txt  (+23 more)
mcp/: Cargo.toml  README.md
mcp/src/: main.rs
mcp/src/engine/: mod.rs  query.rs
mcp/src/parsers/: apache.rs  apache_fast.rs  apache_simd.rs  csv.rs  json.rs  mod.rs  syslog.rs  syslog_simd.rs
mcp/src/tools/: mod.rs
(+58 files in other folders)
