[package]
name = "forensic-log-mcp"
version = "0.3.0"
edition = "2024"
description = "High-performance MCP server for log analysis"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/forensic-log-mcp"
keywords = ["mcp", "log-analysis", "polars", "simd"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
rmcp = { version = "0.11", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
polars = { version = "0.46", features = ["lazy", "csv", "json", "parquet", "strings", "regex", "dtype-datetime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
regex = "1"
rayon = "1.10"
memmap2 = "0.9"
memchr = { version = "2.7", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
